modal component visualization fix with backface visibility

--- a/ashes/src/less/modules/_modal.less
+++ b/ashes/src/less/modules/_modal.less
@@ -10,7 +10,7 @@
   justify-content: center;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1000;
-
+  backface-visibility: hidden;
 
   &-container {
     margin: auto;
